--- a/CleanArchMVC/CleanArchMVC.Infra.Ioc/CleanArchMVC.Infra.Ioc.csproj
+++ b/CleanArchMVC/CleanArchMVC.Infra.Ioc/CleanArchMVC.Infra.Ioc.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CleanArchMVC.Application\CleanArchMVC.Application.csproj" />
     <ProjectReference Include="..\CleanArchMVC.Domain\CleanArchMVC.Domain.csproj" />
     <ProjectReference Include="..\CleanArchMVC.Infra.Data\CleanArchMVC.Infra.Data.csproj" />
